# polyglot_dev_atlas_ver2

./: .gitignore  CI_CD_GUIDE.md  FRONTEND_ARCHITECTURE_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_PROGRESS.md  MIGRATION_COVERAGE_PLAN.md  PHASE_1_IMPLEMENTATION.md  README.md  build.py  debug_mockup.html  index.html  index_mock.html  legacy_build.py  legacy_index.html  requirements.txt
.github/workflows/: build.yml  dead-links.yml  release-dist.yml  validate-pr.yml
assets/: manifest.json
assets/css/: accessible.css  blocks.css  main.css  themes.css  tutorial.css  ui_states.css
assets/css/modules/: components.css  content_blocks.css  insights.css  layout.css  nav.css  phase2.css  sidebar.css
assets/css/themes/: dark.css  high-contrast.css  light.css
assets/js/: app.js  content_renderers.js  i18n.js  markdown_renderer.js  marked.offline.js  polyglot_filter.js  search_ui.js  selection_engine.js  service_worker.js  state.js  ui.js
build_system/: assemblers.py  config.py  core.py  core.py.broken  dead_link_checker.py  icon_sync.py  navigation.py  registry.py  renderers.py  utils.py
content/codes/: README.md
content/codes/json/: common.json  design_pattern.json  exercise.json  lcci.json  problems.json
content/codes/markdown/: common.md  design_pattern.md  exercise.md  lcci.md  problems.md
content/codes/tools/: export_registry_to_md.py  update_registry_from_md.py
content/core/: base_block.json  language_icons.json  page_base.json  page_schema.json
content/data/: data.json
content/definitions/: languages.json  possible_future_language_options.txt
content/definitions/keywords/: cpp.json  csharp.json  go.json  javascript.json  rust.json
content/definitions/schema/: design_patterns.schema.json
content/keywords/: cpp.json  go.json  python.json  scala2.json  scala3.json  typescript.json
content/modules/: atlas-grid.html  comparison.html  hero.html  syntax_overview.html
content/pages/: atlas_home.page.json  basics.page.json  course_home.page.json  exercises.page.json  hello_world.json  index.json  interview.page.json  patterns.page.json  principles.page.json  problems.page.json  sheets.page.json  workflow.page.json
content/pages/atlas/: atlas_home.json  design_patterns.json  external_links_test.json  hello_world copy.json  hello_world.json  index.json  insights_test.json  keywords.json  playground_setup.json  principles.json  syntax.json  workflow.json
content/pages/course/: basics.json  course_dashboard.json  exercieses.json.bak  exercises.json  index.json  intro.json  problems.json
content/pages/meta/: blocks_nesting.json  content_types.json  customization.json  external_links_test.json  getting_started.json  index.json  insights_test.json
content/schema/: scheet_schema.json
content/schemas/: page_schema.json
content/snippets/: demo.sheet.json
content/snippets/cpp/: design_patterns_abstract_factory.cpp  design_patterns_adapter.cpp  design_patterns_bridge.cpp  design_patterns_builder.cpp  design_patterns_chain_of_responsibility.cpp  design_patterns_chain_of_responsibility_cpp_modern.cpp  design_patterns_factory_method.cpp  design_patterns_flyweight.cpp  design_patterns_iterator.cpp  design_patterns_observer_modern.cpp  design_patterns_prototype.cpp  design_patterns_singleton.cpp  design_patterns_state.cpp  design_patterns_strategy.cpp  design_patterns_strategy_cpp_modern.cpp  design_patterns_visitor.cpp  exercise_array_reverse.cpp  exercise_fibonacci.cpp  exercise_palindrome.cpp  exercise_stream_processor.cpp  exercise_tree_traversal.cpp  interview_lcci_01_01_is_unique.cpp  interview_lcci_01_02_check_permutation.cpp  interview_lcci_01_03_string_to_url.cpp  interview_lcci_01_04_palindrome_permutation.cpp  interview_lcci_02_02_kth_node_from_end.cpp  interview_lcci_02_04_partition_list.cpp  interview_lcci_02_08_linked_list_cycle.cpp  interview_lcci_03_01_three_in_one.cpp  interview_lcci_03_02_min_stack.cpp  interview_lcci_03_03_stack_of_plates.cpp  interview_lcci_04_01_route_between_nodes.cpp  interview_lcci_04_02_minimum_height_tree.cpp  interview_lcci_04_03_list_of_depth.cpp  interview_lcci_04_06_successor.cpp  interview_lcci_04_10_check_subtree.cpp  interview_lcci_05_01_insert.cpp  (+54 more)
content/tools/: deref_validate.py
content/ui_styles/: default.json  ocean.json  sunset.json
legacy_content/: __watch_touch.txt
legacy_content/codes/: README.md  codes_registry.json
legacy_content/data/: usage_guide.json
legacy_content/pages/: basics.page.json  course_home.page.json  demo.page.json  exercises.page.json  interview.page.json  patterns.page.json  problems.page.json  sheets.page.json
legacy_content/schema/: page_schema.json
legacy_content/sheets/: cpp.sheet.json  go.sheet.json  python.sheet.json  scala.sheet.json  typescript.sheet.json
legacy_content/snippets/: cpp.sheet.json  python.sheet.json
legacy_content/tools/: deref_validate.py
playground/: README.md
playground/cpp/.setup/example_project/: CMakeLists.txt
playground/cpp/.setup/example_project/src/: hello.cpp
playground/cpp/.setup/example_project/tests/: hello_test.cpp
playground/cpp/linkage_demo/: CMakeLists.txt  greeter.cpp  main.cpp
playground/cpp/linkage_demo/tests/: greeter_test.cpp
playground/cpp/threadpool/: CMakeLists.txt  README.md  main.cpp  threadpool.h  threadpool_examples.cpp
playground/cpp/threadpool/cmake/: threadpoolConfig.cmake.in
playground/cpp/threadpool/tests/: CMakeLists.txt  threadpool_test.cpp
playground/python/: README.md
playground/python/.setup/example_project/: pyproject.toml
playground/python/.setup/example_project/src/example_project/: __main__.py  core.py
playground/scala/: README.md
scripts/: apply_group_difficulty_to_exercises_json.py  auto_fix_exercises_json_paths.py  cleanup_remove_duplicate_code_defaults.py  fix_exercises_json_paths.py  generate_interview_pages_from_legacy.py  migrate_snippets.py  move_intermediate_to_advanced.py  normalize_exercises_structure.py  restructure_exercises.py  update_design_patterns_paths.py
templates/: base.html
tmp/: LAYOUT.md
tools/: copy_typescript_snippets.ps1  validate_schema.py
(+1351 files in other folders)
